# girok

./: .cz.toml  .gitignore  README.md  new_requirements.txt  processreq.py  pyproject.toml  requirements.txt  requirements_backup.txt  version-history.md
.github/: .gitmessage.txt  .pre-commit-config.yaml  commit_template_manual.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug-report.md  docs.md  extra.md  feature-request.md  refactor.md
.github/workflows/: aws.yml
background-images/: README.md
girok/: README.md  __init__.py  api_client.py  auth_handler.py  config.json  config.py  constants.py  girok.py  requirements.txt
girok/api/: auth.py  category.py  entity.py  task.py
girok/calendar_cli/: calendar_app.py  calendar_container.py  calendar_main.css  calendar_main.py  entity.py  sidebar.py  utils.py
girok/commands/: auth.py  calendar.py  category.py  info.py  task.py
girok/commands/auth/: command.py
girok/commands/calendar/: command.py
girok/commands/category/: command.py  util.py
girok/commands/task/: callbacks.py  command.py  display.py  entity.py  utils.py
girok/config/: auth_handler.py
girok/server/: requirements.txt
girok/server/src/: database.py  utils.py
girok/server/src/category/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
girok/server/src/task/: enums.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
girok/styles/: stopwatch03.css
girok/utils/: auth.py  calendar.py  display.py  general.py  json_utils.py  task.py  time.py
server/src/: dependencies.py
server/src/auth/: config.py  exceptions.py  router.py  schemas.py  service.py  utils.py
server/src/email/: config.py  email.py  verification.html
server/src/user/: models.py
