[tool.poetry]
name = "girok"
version = "0.1.9"
description = "Fixed email verification"
authors = ["Jason Lee <changjin9792@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
girok = "girok.girok:app"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp="3.8.4"
aiosignal="1.3.1"
async-timeout="4.0.2"
attrs="22.2.0"
certifi="2022.12.7"
charset-normalizer="3.0.1"
click="8.1.3"
colorama="0.4.6"
commonmark="0.9.1"
frozenlist="1.3.3"
ghp-import="2.1.0"
idna="3.4"
importlib-metadata="4.13.0"
Jinja2="3.1.2"
linkify-it-py="2.0.0"
Markdown="3.3.7"
markdown-it-py="2.2.0"
MarkupSafe="2.1.2"
mdit-py-plugins="0.3.5"
mdurl="0.1.2"
mergedeep="1.3.4"
mkdocs="1.4.2"
mkdocs-exclude="1.0.2"
msgpack="1.0.5"
multidict="6.0.4"
numpy="1.24.2"
packaging="23.0"
Pygments="2.14.0"
python-dateutil="2.8.2"
PyYAML="6.0"
pyyaml_env_tag="0.1"
requests="2.28.2"
rich="13.3.2"
shellingham="1.5.0.post1"
six="1.16.0"
textual="0.14.0"
typer="0.7.0"
typing_extensions="4.5.0"
uc-micro-py="1.0.1"
urllib3="1.26.14"
watchdog="2.3.1"
yarl="1.8.2"
zipp="3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
