[tool.poetry]
name = "girok"
version = "0.1.16"
description = "Moved resources directory from girok directory to root directory"
authors = ["Jason Lee <changjin9792@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
girok = "girok.girok:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
textual = "^0.48.1"



[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
